# sedo-client

./: .cspell.json  .gitignore  CHANGELOG.md  FIDDLER-CAPTURE-GUIDE.md  LICENSE  OPENSC-QUICKSTART.md  README.md  README_uk.md  SETUP-WINDOWS.md  iit_client.py  mechanism_ids.py  opensc-test-almaz.ps1  opensc_signer.py  pkcs11_signer.py  pyproject.toml  requirements.txt  sedo_client.py  virtual_signer.py
.github/workflows/: build-unix.yml  build-windows.yml  release.yml  spellcheck.yml
ansible/inventory/: hosts.yml  vault.yml.example
ansible/playbooks/: sedo_daily.yml  sedo_daily_linux.yml
docs/: ARCHITECTURE.md  IIT-ANALYSIS-ADDENDUM-v2.md  IIT-ANALYSIS-ADDENDUM-v3.md  IIT-ANALYSIS-ADDENDUM-v4.md  IIT-ANALYSIS-ADDENDUM-v5.md  IIT-ANALYSIS-ADDENDUM-v6.md  IIT-ANALYSIS-ADDENDUM.md  IIT-ANALYSIS.md  LINUX-WINE-DEPLOYMENT.md  MECHANISM-IDS.md  MINIMUM-FILES-LIST.md  PROTOCOL-JSON-RPC.md  README.md  REVERSE-METHODOLOGY.md
scripts/: build_binary.py  fiddler_analyze.py  smoke_test.py
tests/: conftest.py  test_avest.py  test_iit_client.py  test_opensc_signer.py  test_sedo_client.py  test_virtual_signer.py
